# sentinel

./: CMakeLists.txt  Makefile
.github/workflows/: examples.yml
example/: logger.cpp  profiler.cpp
include/sentinel/: logger.h  profiler.h
src/: logger.cpp  profiler.cpp
